# jrender

./: .clang-format  .gitignore  CMakeLists.txt  README.md  geometry.cpp  geometry.h  main.cpp  render.hpp
